# stochasticTO

./: .gitignore  Claude.md  Dockerfile.dev  Dockerfile.gpu  masterContext.md  pyproject.toml  requirements.txt
.claude/skills/numpy-scientific-computing/: SKILL.md
.claude/skills/scipy-scientific-computing	/: SKILL.md
.claude/skills/simulation-math-foundations/: SKILL.md
.devcontainer/alienware/: devcontainer.json  postCreate.sh
.devcontainer/common/: postCreate_common.sh
.devcontainer/dgx/: devcontainer.json  postCreate.sh
data/metrology/: NIST_LPBF.txt  README.md
docs/: framework-map.md  implementation-modules.md  onboarding-guide.md
mpi_settings/: hostfile
notebooks/: 02_nominal_simp_demo.ipynb  02_nominal_simp_demo.py  03_kl_modes_visualization.py  04_pce_surrogate_demo.ipynb  04_pce_surrogate_demo.py  metrology.xlsx
notebooks/02_nominal_simp_demo_out/reports/: driver_scaling_report.html  inputs.html  n2.html
notebooks/output/: mbb_optimization_summary.csv  rho_opt_density_field.csv
src/: fileDescription.md
tests/: fileDescription.md
